--- a/data/cards/13298352.yaml
+++ b/data/cards/13298352.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 胄之忍者-橹丸
 text:
   en: |-
     2 "Ninja" monsters with different Types
@@ -27,7 +27,11 @@ text:
     このカードは融合召喚及び以下の方法でのみＥＸデッキから特殊召喚できる。●自分フィールドの上記カードをリリースした場合にＥＸデッキから特殊召喚できる。①：このカードが特殊召喚・リバースした場合、自分の手札・墓地及び自分フィールドの表側表示のカードの中から、このカード以外の「忍者」カードまたは「忍法」カード１枚を除外し、フィールドのカード１枚を対象として発動できる。そのカードを除外する。このカード名のこの効果は１ターンに１度しか使用できない。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    种族不同的「忍者」怪兽×2
+    这张卡用融合召唤以及以下方法才能从额外卡组特殊召唤。
+    ●把自己场上的上记卡解放的场合可以从额外卡组特殊召唤。
+    ①：这张卡特殊召唤·反转的场合，从自己的手卡·墓地以及自己场上的表侧表示的卡之中把这张卡以外的1张「忍者」卡或者「忍法」卡除外，以场上1张卡为对象才能发动。那张卡除外。这个卡名的这个效果1回合只能使用1次。
 card_type: Monster
 monster_type_line: Machine / Fusion / Effect
 attribute: DARK
