--- a/data/cards/34447918.yaml
+++ b/data/cards/34447918.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 六世坏他化自在天
 text:
   en: |-
     Target 1 "Kashtira" monster you control; Special Summon 1 "Kashtira" monster with a different Attribute from your Deck in Defense Position, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Xyz Monsters. If this card becomes banished: You can target 1 of your banished "Kashtira" cards, except "Kashtira Papiyas"; add it to your hand. You can only use each effect of "Kashtira Papiyas" once per turn.
@@ -25,7 +25,10 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの「クシャトリラ」モンスター１体を対象として発動できる。そのモンスターとは属性が異なる「クシャトリラ」モンスター１体をデッキから守備表示で特殊召喚する。このカードの発動後、ターン終了時まで自分はＸモンスターしかＥＸデッキから特殊召喚できない。②：このカードが除外された場合、「六世壊他化自在天」以外の除外されている自分の「クシャトリラ」カード１枚を対象として発動できる。そのカードを手札に加える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②的效果1回合各能使用1次。
+    ①：以自己场上1只「俱舍怒威族」怪兽为对象才能发动。和那只怪兽属性不同的1只「俱舍怒威族」怪兽从卡组守备表示特殊召唤。这张卡的发动后，直到回合结束时自己不是超量怪兽不能从额外卡组特殊召唤。
+    ②：这张卡被除外的场合，以「六世坏他化自在天」以外的除外的1张自己的「俱舍怒威族」卡为对象才能发动。那张卡加入手卡。
 card_type: Spell
 property: Normal
 series:
