--- a/data/cards/34690953.yaml
+++ b/data/cards/34690953.yaml
@@ -12,7 +12,7 @@ name:
   ko: 금주 아라마티아
   ko_rr: Geumju Aramatia
   zh-TW:
-  zh-CN: 禁咒 阿拉玛提亚
+  zh-CN: 禁咒 阿拉马提亚
 text:
   en: |-
     During your Main Phase: You can Special Summon 1 "Adventurer Token" (Fairy/EARTH/Level 4/ATK 2000/DEF 2000) to either field, then send 1 card from your hand to the GY. You cannot Special Summon monsters the turn you activate this effect, except "Adventurer Tokens" and monsters that mention it. If a monster(s) you control is destroyed by battle or card effect: You can Special Summon 1 "Adventurer Token" to either field. You can only use each effect of "Curse of Aramatir" once per turn.
@@ -32,7 +32,9 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 자신 또는 상대 필드에 "용사 토큰"(천사족 / 땅 / 레벨 4 / 공 2000 / 수 2000) 1장을 특수 소환한다. 그 후, 자신의 패를 1장 고르고 묘지로 보낸다. 이 효과를 발동하는 턴에, 자신은 "용사 토큰" 및 그 토큰명이 쓰여진 몬스터밖에 특수 소환할 수 없다. ②: 자신 필드의 몬스터가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 자신 또는 상대 필드에 "용사 토큰" 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：自己的主要阶段可以发动。将1只「勇者トークン／勇者衍生物」（天使族·地·4星·攻/守2000）特殊召唤到自己或者对手的场上。那之后，选1张自己的手牌送入墓地。这个效果发动的回合，自己特殊召唤的只能是「勇者トークン／勇者衍生物」以及记述了其衍生物名的怪兽。②：自己场上的怪兽被战斗或效果破坏的场合可以发动。将1只「勇者トークン／勇者衍生物」特殊召唤到自己或者对手的场上。
+    这个卡名的①②的效果1回合各能使用1次。
+    ①：自己主要阶段才能发动。在自己或者对方场上把1只「勇者衍生物」（天使族·地·4星·攻/守2000）特殊召唤。那之后，选自己1张手卡送去墓地。这个效果发动的回合，自己若非「勇者衍生物」以及有那个衍生物名记述的怪兽则不能特殊召唤。
+    ②：自己场上的怪兽被战斗·效果破坏的场合才能发动。在自己或者对方场上把1只「勇者衍生物」特殊召唤。
 card_type: Spell
 property: Continuous
 series:
