--- a/data/cards/56347375.yaml
+++ b/data/cards/56347375.yaml
@@ -12,7 +12,7 @@ name:
   ko: 룡검사 이그니스<ruby>P<rt>피닉스</rt></ruby>
   ko_rr: Ryonggeomsa Igeuniseu Pinikseu
   zh-TW:
-  zh-CN: 龙剑士 点火不死鸟P
+  zh-CN: 龙剑士 点火烈·凤凰
 text:
   en: |-
     (This card is always treated as an "Igknight" card.)
@@ -38,7 +38,12 @@ text:
     이 카드명은 룰상 "이그나이트" 카드로도 취급한다. 이 카드명의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 필드의 이 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 덱에서 "룡검사 이그니스P(피닉스)" 이외의, "룡검사" 몬스터 또는 "이그나이트" 몬스터 1장을 특수 소환한다. 이 효과로 특수 소환한 몬스터는 튜너로 취급한다.
   zh-TW:
   zh-CN: |-
-    这个卡名规则上也当作「イグナイト／点火骑士」卡使用。这个卡名的怪兽效果1回合只能使用1次。①：场上的这张卡被战斗或效果破坏的场合可以发动。从卡组特殊召唤1只「竜剣士イグニスP／龙剑士 点火不死鸟P」以外的、「竜剣士／龙剑士」怪兽或者「イグナイト／点火骑士」怪兽。用这个效果特殊召唤的怪兽当作调整使用。
+    ←7 【灵摆】 7→
+    这个卡名的灵摆效果1回合只能使用1次。
+    ①：自己主要阶段才能发动。从自己的额外卡组让1只表侧表示的灵摆怪兽回到卡组。那之后，灵摆怪兽以外的1只「龙剑士」怪兽或者「点火骑士」怪兽从卡组加入手卡。
+    【怪兽效果】
+    这个卡名在规则上也当作「点火骑士」卡使用。这个卡名的怪兽效果1回合只能使用1次。
+    ①：场上的这张卡被战斗·效果破坏的场合才能发动。从卡组把「龙剑士 点火烈·凤凰」以外的1只「龙剑士」怪兽或者「点火骑士」怪兽特殊召唤。这个效果特殊召唤的怪兽当作调整使用。
 card_type: Monster
 monster_type_line: Warrior / Pendulum / Effect
 attribute: FIRE
@@ -64,8 +69,7 @@ pendulum_effect:
   ko: |-
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 자신의 엑스트라 덱에서 앞면 표시의 펜듈럼 몬스터 1장을 덱으로 되돌린다. 그 후, 펜듈럼 몬스터 이외의, "룡검사" 몬스터 또는 "이그나이트" 몬스터 1장을 덱에서 패에 넣는다.
   zh-TW:
-  zh-CN: |-
-    这个卡名的灵摆效果1回合只能使用1次。①：自己的主要阶段可以发动。从自己的额外卡组使1只表侧表示的灵摆怪兽返回卡组。那之后，从卡组将1只灵摆怪兽以外的、「竜剣士／龙剑士」怪兽或者「イグナイト／点火骑士」怪兽加入手牌。
+  zh-CN:
 series:
 - Dracoslayer
 - Igknight
