--- a/data/cards/63899465.yaml
+++ b/data/cards/63899465.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 救援王牌总部
+  zh-CN: 救援ACE队总部
 text:
   en: |-
     While your opponent controls a monster, "Rescue-ACE" monsters you control gain 500 ATK/DEF. During your Main Phase, you can Normal Summon 1 "Rescue-ACE" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) Once per turn: You can target 4 of your "Rescue-ACE" cards that are banished and/or in your GY; shuffle them into the Deck, then draw 1 card.
@@ -26,7 +26,9 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    ①：只要对手场上有怪兽存在，自己场上的「R－ACE／救援王牌」怪兽的攻击力、守备力就上升500。②：自己在通常召唤外可以追加仅1次，在自己的主要阶段召唤1只「R－ACE／救援王牌」怪兽。③：1回合1次，可以从自己的墓地的卡以及除外中的自己的卡之中，以4张「R－ACE／救援王牌」卡为对象发动。使那些卡返回卡组洗切。那之后，自己从卡组抽1张。
+    ①：只要对方场上有怪兽存在，自己场上的「救援ACE队」怪兽的攻击力·守备力上升500。
+    ②：自己在通常召唤外加上只有1次，自己主要阶段可以把1只「救援ACE队」怪兽召唤。
+    ③：1回合1次，从自己墓地的卡以及除外的自己的卡之中以4张「救援ACE队」卡为对象才能发动。那些卡回到卡组洗切。那之后，自己从卡组抽1张。
 card_type: Spell
 property: Field
 series:
