--- a/data/cards/69133798.yaml
+++ b/data/cards/69133798.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 大太郎法师
 text:
   en: |-
     Cannot be Special Summoned. You can Tribute Summon this card face-up by Tributing 1 Zombie monster. Gains 200 ATK for every other Zombie monster you control. At the start of your Main Phase 1, if this card, and 2 or more Zombie monsters other than "Daidara-Bocchi", are in your GY: You can discard 1 card; add this card to your hand.
@@ -25,7 +25,10 @@ text:
     このカードは特殊召喚できない。このカードはアンデット族モンスター１体をリリースして表側表示でアドバンス召喚できる。①：このカードの攻撃力は、自分フィールドの他のアンデット族モンスターの数×２００アップする。②：このカードが墓地に存在し、自分の墓地に「ダイダラボッチ」以外のアンデット族モンスターが２体以上存在する場合、自分メインフェイズ１開始時に、手札を１枚捨てて発動できる。このカードを手札に加える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这张卡不能特殊召唤。这张卡可以把1只不死族怪兽解放表侧表示上级召唤。
+    ①：这张卡的攻击力上升自己场上的其他的不死族怪兽数量×200。
+    ②：这张卡在墓地存在，自己墓地有「大太郎法师」以外的不死族怪兽2只以上存在的场合，自己主要阶段1开始时，丢弃1张手卡才能发动。这张卡加入手卡。
 card_type: Monster
 monster_type_line: Zombie / Effect
 attribute: EARTH
