--- a/data/cards/87804747.yaml
+++ b/data/cards/87804747.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 完全态大昆虫
 text:
   en: |-
     1 Level 8 Insect monster + 1 Level 7 Insect monster
@@ -27,7 +27,12 @@ text:
     自分は「完全態・グレート・インセクト」を１ターンに１度しか特殊召喚できない。このカードは融合召喚及び以下の方法でのみＥＸデッキから特殊召喚できる。●装備カードを装備した自分の守備力２０００以上の昆虫族モンスター１体をリリースした場合にＥＸデッキから特殊召喚できる。①：このカードは戦闘では破壊されない。②：フィールドゾーンに表側表示でカードが存在する場合、自分・相手のバトルフェイズに１度、発動できる。相手フィールドのモンスターを全て破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    昆虫族·8星怪兽＋昆虫族·7星怪兽
+    自己对「完全态大昆虫」1回合只能有1次特殊召唤。这张卡用融合召唤以及以下方法才能从额外卡组特殊召唤。
+    ●把有装备卡装备的1只自己的守备力2000以上的昆虫族怪兽解放的场合可以从额外卡组特殊召唤。
+    ①：这张卡不会被战斗破坏。
+    ②：场地区域有表侧表示卡存在的场合，自己·对方的战斗阶段才能发动1次。对方场上的怪兽全部破坏。
 card_type: Monster
 monster_type_line: Insect / Fusion / Effect
 attribute: EARTH
