--- a/data/cards/91592030.yaml
+++ b/data/cards/91592030.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 威迫矿石-迫选召唤石
 text:
   en: |-
     Target 3 monsters in your GY; choose 1 of them, then your opponent chooses 1 of these effects for you to apply.
@@ -27,7 +27,10 @@ text:
     ①：自分の墓地のモンスター３体を対象として発動できる。自分はその３体の中から１体を選ぶ。その後、相手は以下の効果から１つを選び、自分はその効果を適用する。●選んだモンスターを特殊召喚する。●選んだモンスター以外の対象のモンスターを可能な限り特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：以自己墓地3只怪兽为对象才能发动。自己从那3只之中选1只。那之后，对方从以下效果选1个，自己让那个效果适用。
+    ●选的怪兽特殊召唤。
+    ●选的怪兽以外的作为对象的怪兽尽可能特殊召唤。
 card_type: Trap
 property: Normal
 sets:
