--- a/data/cards/03084730.yaml
+++ b/data/cards/03084730.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 昆虫机甲铠
 text:
   en: |-
     If this card is in your hand or GY and you do not control "Bio Insect Armor": You can target 1 Insect monster you control; equip this card to it, but banish this card and that equipped monster when they leave the field. You can only use this effect of "Bio Insect Armor" once per turn. A monster equipped with this card gains 1500 ATK/2000 DEF during the Battle Phase and Main Phase 2 only.
@@ -25,7 +25,10 @@ text:
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが手札・墓地に存在し、自分フィールドに「昆虫機甲鎧」が存在しない場合、自分フィールドの昆虫族モンスター１体を対象として発動できる。このカードを装備カード扱いとしてそのモンスターに装備する。このカード及びこの効果でこのカードを装備したモンスターは、フィールドから離れた場合に除外される。②：このカードを装備したモンスターはお互いのバトルフェイズ及びメインフェイズ２の間、攻撃力が１５００アップし、守備力が２０００アップする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①的效果1回合只能使用1次。
+    ①：这张卡在手卡·墓地存在，自己场上没有「昆虫机甲铠」存在的场合，以自己场上1只昆虫族怪兽为对象才能发动。这张卡当作装备卡使用给那只怪兽装备。这张卡以及用这个效果把这张卡装备的怪兽从场上离开的场合除外。
+    ②：有这张卡装备的怪兽在双方的战斗阶段以及主要阶段2内攻击力上升1500，守备力上升2000。
 card_type: Monster
 monster_type_line: Insect / Effect
 attribute: EARTH
