--- a/data/cards/03289027.yaml
+++ b/data/cards/03289027.yaml
@@ -12,7 +12,7 @@ name:
   ko: 암흑계의 은둔자 파알
   ko_rr: Amheukgye-ui Eundunja Paal
   zh-TW:
-  zh-CN: 暗黑界的隐者 珠
+  zh-CN: 暗黑界的隐者 珀尔
 text:
   en: |-
     If this card is discarded to the GY by card effect: You can target 1 "Dark World" monster in your GY, except "Perl, Hermit of Dark World"; Special Summon it to either field, then, if this card was discarded from your hand to your GY by an opponent's card effect, you can Special Summon 1 of your Fiend monsters that is banished, in your hand, or in your GY to either field. You can only use this effect of "Perl, Hermit of Dark World" once per turn.
@@ -27,7 +27,8 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 효과로 패에서 묘지로 버려졌을 경우, "암흑계의 은둔자 파알" 이외의 자신 묘지의 "암흑계" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 자신 또는 상대 필드에 특수 소환한다. 상대 효과로 버려졌을 경우, 추가로 자신의 패 / 묘지의 몬스터 및 제외되어 있는 자신의 몬스터 중에서, 악마족 몬스터 1장을 고르고 자신 또는 상대 필드에 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的效果1回合只能使用1次。①：这张卡被效果从手牌舍弃入墓地的场合，可以以「暗黒界の隠者 パアル／暗黑界的隐者 珠」以外的自己墓地的1只「暗黒界／暗黑界」怪兽为对象发动。将那只怪兽特殊召唤到自己或者对手的场上。是被对手的效果舍弃的场合，可以再从自己的手牌或墓地的怪兽以及除外中的自己的怪兽之中，选1只恶魔族怪兽特殊召唤到自己或者对手的场上。
+    这个卡名的效果1回合只能使用1次。
+    ①：这张卡被效果从手卡丢弃去墓地的场合，以「暗黑界的隐者 珀尔」以外的自己墓地1只「暗黑界」怪兽为对象才能发动。那只怪兽在自己或者对方场上特殊召唤。被对方的效果丢弃的场合，可以再从自己的手卡·墓地的怪兽以及除外的自己怪兽之中选1只恶魔族怪兽在自己或者对方场上特殊召唤。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
