--- a/data/cards/06589707.yaml
+++ b/data/cards/06589707.yaml
@@ -12,7 +12,7 @@ name:
   ko: 지중계의 액재
   ko_rr: Jijunggye-ui Aekjae
   zh-TW:
-  zh-CN: 地中界的厄灾
+  zh-CN: 地中界的灾厄
 text:
   en: |-
     Your opponent cannot target face-down Defense Position monsters you control with card effects. Monsters you control that were flipped face-up while this card was face-up on the field gain 1500 ATK/DEF. If this card in its owner's Spell & Trap Zone is destroyed by an opponent's card effect: You can target 1 monster in your GY; Special Summon it in face-down Defense Position.
@@ -32,7 +32,9 @@ text:
     ①: 자신 필드의 뒷면 수비 표시 몬스터는 상대 효과의 대상이 되지 않는다. ②: 이 카드가 마법 & 함정 존에 존재하는 한, 이 카드가 앞면 표시로 존재하는 동안에 리버스한, 자신 필드의 몬스터의 공격력 / 수비력은 1500 올린다. ③: 마법 & 함정 존의 이 카드가 상대 효과로 파괴되었을 경우, 자신 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 뒷면 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：自己场上的里侧守备表示怪兽不会成为对手的效果的对象。②：只要这张卡在魔法陷阱区存在，这张卡以表侧表示存在期间翻转的自己场上的怪兽的攻击力、守备力就上升1500。③：魔法陷阱区的这张卡被对手的效果破坏的场合，可以以自己墓地的1只怪兽为对象发动。将那只怪兽以里侧守备表示特殊召唤。
+    ①：自己场上的里侧守备表示怪兽不会成为对方的效果的对象。
+    ②：只要这张卡在魔法与陷阱区域存在，让在这张卡表侧表示存在期间反转过的自己场上的怪兽的攻击力·守备力上升1500。
+    ③：魔法与陷阱区域的这张卡被对方的效果破坏的场合，以自己墓地1只怪兽为对象才能发动。那只怪兽里侧守备表示特殊召唤。
 card_type: Spell
 property: Continuous
 sets:
