--- a/data/cards/06637331.yaml
+++ b/data/cards/06637331.yaml
@@ -32,7 +32,9 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 또는 상대 묘지의, 빛 / 어둠 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외하고, 이 카드를 패에서 특수 소환한다. 상대 필드에 몬스터가 존재할 경우, 이 효과는 상대 턴에도 발동할 수 있다. ②: 이 카드가 필드에서 묘지로 보내졌을 경우, 상대 필드의 특수 소환된 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：可以以自己或者对手的墓地的1只光或暗属性怪兽为对象发动。将那只怪兽除外，将这张卡从手牌特殊召唤。对手场上有怪兽存在的场合，这个效果在对手的回合也能发动。②：这张卡从场上送入墓地的场合，可以以对手场上的1只特殊召唤的怪兽为对象发动。将那只怪兽送入墓地。
+    这个卡名的①②的效果1回合各能使用1次。
+    ①：以自己或者对方的墓地1只光·暗属性怪兽为对象才能发动。那只怪兽除外，这张卡从手卡特殊召唤。对方场上有怪兽存在的场合，这个效果在对方回合也能发动。
+    ②：这张卡从场上送去墓地的场合，以对方场上1只特殊召唤的怪兽为对象才能发动。那只怪兽送去墓地。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
