--- a/data/cards/09940036.yaml
+++ b/data/cards/09940036.yaml
@@ -12,7 +12,7 @@ name:
   ko: 메레올로직 애그리게이터
   ko_rr: Mere-ollojik Aegeurigeiteo
   zh-TW:
-  zh-CN: 分体论聚合者
+  zh-CN: 分体论聚合员
 text:
   en: |-
     2+ Level 9 monsters
@@ -40,8 +40,11 @@ text:
     이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 엑시즈 소환에 성공했을 경우에 발동할 수 있다. 엑스트라 덱에서 몬스터 1장을 묘지로 보낸다. ②: 이 카드의 엑시즈 소재의 수까지 자신 묘지의 몬스터를 대상으로 하고 발동할 수 있다. 대상의 수만큼 이 카드의 엑시즈 소재를 제거하고, 대상 몬스터를 이 카드 아래에 겹쳐 엑시즈 소재로 한다. ③: 이 카드가 묘지로 보내졌을 경우, 필드의 앞면 표시의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드의 효과를 턴 종료시까지 무효로 한다.
   zh-TW:
   zh-CN: |-
-    等级9怪兽×2只以上
-    这个卡名的①②③效果1回合各能使用1次。①：这张卡多维召唤成功的场合可以发动。从额外卡组将1只怪兽送入墓地。②：可以以最多为这张卡的多维素材的数量的自己墓地的怪兽为对象发动。按照对象的数量将这张卡的多维素材取除，将对象怪兽叠放在这张卡下面作为多维素材。③：这张卡被送入墓地的场合，可以以场上的1张表侧表示的卡为对象发动。那张卡的效果直到回合结束时无效。
+    9星怪兽×2只以上
+    这个卡名的①②③的效果1回合各能使用1次。
+    ①：这张卡超量召唤成功的场合才能发动。从额外卡组把1只怪兽送去墓地。
+    ②：以最多有这张卡的超量素材数量的自己墓地的怪兽为对象才能发动。对象数量的这张卡的超量素材取除，作为对象的怪兽在这张卡下面重叠作为超量素材。
+    ③：这张卡被送去墓地的场合，以场上1张表侧表示的卡为对象才能发动。那张卡的效果直到回合结束时无效。
 card_type: Monster
 monster_type_line: Cyberse / Xyz / Effect
 attribute: DARK
