--- a/data/cards/16769305.yaml
+++ b/data/cards/16769305.yaml
@@ -38,7 +38,9 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 리버스했을 경우, 1~9 까지의 임의의 레벨을 선언하고 발동할 수 있다. 이 카드의 레벨은 턴 종료시까지 선언한 레벨이 된다. ②: 리버스한 이 카드가 앞면 표시로 존재할 경우, 자신 / 상대의 메인 페이즈에, 이 카드 이외의 자신 / 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와 이 카드만을 소재로서 싱크로 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：这张卡翻转的场合，可以宣言1～9的任意等级发动。这张卡的等级直到回合结束时变为宣言的等级。②：翻转的这张卡以表侧表示存在的场合，自己或对手的主要阶段，可以以这张卡以外的自己或对手场上的1只表侧表示怪兽为对象发动。只将那只怪兽和这张卡作为素材来同调召唤。
+    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
+    ①：这张卡反转的场合，宣言1～9的任意等级才能发动。这张卡的等级直到回合结束时变成宣言的等级。
+    ②：反转过的这张卡表侧表示存在的场合，自己·对方的主要阶段，以这张卡以外的自己·对方场上1只表侧表示怪兽为对象才能发动。只用那只怪兽和这张卡为素材作同调召唤。
 card_type: Monster
 monster_type_line: Machine / Flip / Tuner / Effect
 attribute: FIRE
