--- a/data/cards/20212491.yaml
+++ b/data/cards/20212491.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 皮儿利迷路的大街
+  zh-CN: 流浪纯爱妖精街道
 text:
   en: |-
     Your opponent cannot target "Purrely" monsters you control with card effects during the turn they were Special Summoned. Once per turn, if a face-up "Purrely" Xyz Monster(s) you control leaves the field by an opponent's card: Special Summon 1 Level 1 "Purrely" monster from your Deck or GY. Once per turn, during the End Phase: You can target 1 "Purrely" Xyz Monster on the field; attach 1 "Purrely" Quick-Play Spell from your Deck or GY to it as material.
@@ -26,7 +26,9 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    ①：自己场上的「ピュアリィ／皮儿利」怪兽在特殊召唤的回合不会成为对手的效果的对象。②：1回合1次，自己场上的表侧表示的「ピュアリィ／皮儿利」多维怪兽因对手而从场上离开的场合必定发动。从自己的卡组或墓地选1只等级1的「ピュアリィ／皮儿利」怪兽特殊召唤。③：双方的结束阶段，可以以场上的1只「ピュアリィ／皮儿利」多维怪兽为对象发动。从自己的卡组或墓地选1张「ピュアリィ／皮儿利」速攻魔法卡叠放在那只怪兽下面作为多维素材。
+    ①：自己场上的「纯爱妖精」怪兽在特殊召唤的回合不会成为对方的效果的对象。
+    ②：1回合1次，自己场上的表侧表示的「纯爱妖精」超量怪兽因对方从场上离开的场合发动。从自己的卡组·墓地选1只1星「纯爱妖精」怪兽特殊召唤。
+    ③：双方的结束阶段，以场上1只「纯爱妖精」超量怪兽为对象才能发动。从自己的卡组·墓地选1张「纯爱妖精」速攻魔法卡在那只怪兽下面重叠作为超量素材。
 card_type: Spell
 property: Field
 series:
