--- a/data/cards/20417688.yaml
+++ b/data/cards/20417688.yaml
@@ -32,7 +32,9 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패의 의식 몬스터 1장을 상대에게 보여주고 발동할 수 있다. 그 몬스터와는 카드명이 다르고, 레벨이 같은 의식 몬스터 1장을 덱에서 패에 넣는다. ②: 묘지의 이 카드를 제외하고, 패에서 의식 마법 카드 1장을 묘지로 보내고 발동할 수 있다. 이 효과는, 그 의식 마법 카드 발동시의 의식 소환하는 효과와 같아진다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：可以向对手展示手牌的1只仪式怪兽发动。从卡组将1只与那只怪兽卡名不同而等级相同的仪式怪兽加入手牌。②：可以将墓地的这张卡除外，从手牌将1张仪式魔法卡送入墓地发动。这个效果变为与那张仪式魔法卡发动时的仪式召唤效果相同。
+    这个卡名的①②的效果1回合各能使用1次。
+    ①：把手卡1只仪式怪兽给对方观看才能发动。和那只怪兽是卡名不同并是等级相同的1只仪式怪兽从卡组加入手卡。
+    ②：把墓地的这张卡除外，从手卡把1张仪式魔法卡送去墓地才能发动。这个效果变成和那张仪式魔法卡发动时的仪式召唤效果相同。
 card_type: Trap
 property: Normal
 sets:
