--- a/data/cards/26259179.yaml
+++ b/data/cards/26259179.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 圣杯情侣双A
 text:
   en: |-
     If this card is in your hand: You can toss a coin and if the result is heads, Special Summon this card to your field, or if the result is tails, Special Summon this card to your opponent's field. You can only use this effect of "Couple of Aces" once per turn. If Summoned this way: Draw 2 cards.
@@ -25,7 +25,10 @@ text:
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが手札に存在する場合に発動できる。コイントスを１回行う。表だった場合、このカードを自分フィールドに特殊召喚する。裏だった場合、このカードを相手フィールドに特殊召喚する。②：このカードの①の効果で特殊召喚に成功した場合に発動する。自分はデッキから２枚ドローする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①的效果1回合只能使用1次。
+    ①：这张卡在手卡存在的场合才能发动。进行1次投掷硬币。表的场合，这张卡在自己场上特殊召唤。里的场合，这张卡在对方场上特殊召唤。
+    ②：这张卡的①的效果特殊召唤成功的场合发动。自己从卡组抽2张。
 card_type: Monster
 monster_type_line: Fairy / Effect
 attribute: EARTH
