--- a/data/cards/34090915.yaml
+++ b/data/cards/34090915.yaml
@@ -32,7 +32,9 @@ text:
     이 카드명의, ①의 효과는 1턴에 1번밖에 사용할 수 없으며, ②의 효과는 동일한 체인 위에서는 1번밖에 발동할 수 없다. ①: 빛 / 어둠 속성 몬스터가 제외되었을 경우, 그 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 덱 맨 아래로 되돌리고, 자신은 덱에서 1장 드로우한다. ②: 1턴에 1번, 상대가 몬스터의 일반 소환 / 특수 소환에 성공했을 경우, 자신 묘지의 "비스테드" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①效果1回合只能使用1次，②效果在同一连锁上只能使用1次。①：光或暗属性怪兽被除外的场合，可以以那样的1只怪兽为对象发动。使那只怪兽返回持有者卡组最下面，自己从卡组抽1张。②：1回合1次，对手召唤或特殊召唤怪兽成功的场合，可以以自己墓地的1只「ビーステッド／深渊之兽」怪兽为对象发动。将那只怪兽特殊召唤。
+    这个卡名的作为①的效果1回合只能使用1次，作为②的效果在同一连锁上只能发动1次。
+    ①：光·暗属性怪兽被除外的场合，以那1只怪兽为对象才能发动。那只怪兽回到持有者卡组最下面，自己从卡组抽1张。
+    ②：1回合1次，对方对怪兽的召唤·特殊召唤成功的场合，以自己墓地1只「深渊之兽」怪兽为对象才能发动。那只怪兽特殊召唤。
 card_type: Spell
 property: Continuous
 series:
