--- a/data/cards/46159582.yaml
+++ b/data/cards/46159582.yaml
@@ -12,7 +12,7 @@ name:
   ko: 리추어의 의수경
   ko_rr:
   zh-TW:
-  zh-CN: 遗式的仪水镜
+  zh-CN: 咒仪之仪水镜
 text:
   en: |-
     This card can be used to Ritual Summon any "Gishki" Ritual Monster. You must also Tribute monsters from the field or your hand whose total Levels equal the Level of the Ritual Monster you Ritual Summon. You can shuffle this card from the Graveyard into the Deck to target 1 "Gishki" Ritual Monster in your Graveyard; return that target to the hand.
@@ -32,7 +32,7 @@ text:
     "리추어"라는 이름이 붙은 의식 몬스터의 의식 소환에 필요. 패 / 자신 필드 위에서, 의식 소환할 몬스터와 같은 레벨이 되도록 몬스터를 릴리스해야 한다. 또한, 묘지에 존재하는 이 카드를 덱으로 되돌리는 것으로, 자신의 묘지에 존재하는 "리추어"라는 이름이 붙은 의식 몬스터 1장을 선택하고 패로 되돌린다.
   zh-TW:
   zh-CN: |-
-    名字带有「遗式」的仪式怪兽的降临必需。必须从自己的手卡·场上把直到变成和仪式召唤的怪兽相同等级为止的怪兽解放。此外，自己的主要阶段时可以通过让墓地的这张卡回到卡组，选择自己墓地1只名字带有「遗式」的仪式怪兽回到手卡。
+    "咒仪"仪式怪兽的降临所必需。①：为使合计等级与仪式召唤的怪兽相等，解放自己手牌・场上的怪兽，从手牌将1只"咒仪"仪式怪兽仪式召唤。②：将墓地的此卡放回牌组，以自己墓地的1只"咒仪"仪式怪兽为对象可以发动。将该怪兽加入手牌。
 card_type: Spell
 property: Ritual
 series:
@@ -81,6 +81,11 @@ sets:
     set_name: 'Hidden Arsenal 5: Steelswarm Invasion'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC092
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
