--- a/data/cards/55125728.yaml
+++ b/data/cards/55125728.yaml
@@ -12,7 +12,7 @@ name:
   ko: 봄화정의 여신 베라
   ko_rr: Bomhwajeong-ui Yeosin Bera
   zh-TW:
-  zh-CN: 春化精的女神 维拉
+  zh-CN: 春化精的女神 春
 text:
   en: |-
     Once per turn, when a monster effect activated by your opponent resolves, if you control 5 or more EARTH monsters, you can negate that effect, and if you do, destroy that card. You can only use each of the following effects of "Vera the Vernusylph Goddess" once per turn. You can target 1 face-up monster your opponent controls; take control of it, and if you do, it becomes EARTH. During your opponent's turn (Quick Effect): You can target 1 EARTH monster in your GY; Special Summon it.
@@ -32,7 +32,10 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 컨트롤을 얻는다. 이 효과로 컨트롤을 얻은 몬스터는 땅 속성이 된다. ②: 상대 턴에, 자신 묘지의 땅 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. ③: 1턴에 1번, 상대가 발동한 몬스터의 효과 처리시에, 자신 필드에 땅 속성 몬스터가 5장 이상 존재할 경우, 그 발동한 효과를 무효로 하고 파괴할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：可以以对手场上的1只表侧表示怪兽为对象发动。得到那只怪兽的操作权。用这个效果得到操作权的怪兽变为地属性。②：对手的回合，可以以自己墓地的1只地属性怪兽为对象发动。将那只怪兽特殊召唤。③：1回合1次，对手发动的怪兽的效果处理时，自己场上有5只以上的地属性怪兽存在的场合，可以使那个发动的效果无效并破坏。
+    这个卡名的①②的效果1回合各能使用1次。
+    ①：以对方场上1只表侧表示怪兽为对象才能发动。得到那只怪兽的控制权。这个效果得到控制权的怪兽变成地属性。
+    ②：对方回合，以自己墓地1只地属性怪兽为对象才能发动。那只怪兽特殊召唤。
+    ③：1回合1次，对方发动的怪兽的效果处理时，自己场上有地属性怪兽5只以上存在的场合，可以把那个发动的效果无效并破坏。
 card_type: Monster
 monster_type_line: Fairy / Effect
 attribute: EARTH
