--- a/data/cards/59094601.yaml
+++ b/data/cards/59094601.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 苏生的天空神
 text:
   en: |-
     The activation of this card, or its effects, cannot be negated, nor can its effects be negated. Special Summon 1 "Slifer the Sky Dragon" from your GY, then each player draws until they have 6 cards in their hand. You can banish this card from your GY; place 1 "Monster Reborn" from your Deck or GY on top of your Deck, then, if a Divine-Beast monster is in your GY, draw 1 card. You can only use each effect of "The Revived Sky God" once per turn.
@@ -30,7 +30,10 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できず、その発動と効果は無効化されない。①：自分の墓地から「オシリスの天空竜」１体を選んで特殊召喚する。その後、お互いはそれぞれ手札が６枚になるようにデッキからドローする。②：墓地のこのカードを除外して発動できる。自分のデッキ・墓地から「死者蘇生」１枚を選んでデッキの一番上に置く。自分の墓地に幻神獣族モンスターが存在する場合、さらに自分はデッキから１枚ドローする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②的效果1回合各能使用1次，那些发动和效果不会被无效化。
+    ①：从自己墓地选1只「奥西里斯之天空龙」特殊召唤。那之后，双方各自直到手卡变成6张为止从卡组抽卡。
+    ②：把墓地的这张卡除外才能发动。从自己的卡组·墓地选1张「死者苏生」在卡组最上面放置。自己墓地有幻神兽族怪兽存在的场合，再让自己从卡组抽1张。
 card_type: Trap
 property: Normal
 sets:
