--- a/data/cards/60242223.yaml
+++ b/data/cards/60242223.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비스테드 살로니르
   ko_rr: Biseutedeu Sallonireu
   zh-TW:
-  zh-CN: 深渊之兽 萨隆恶龙
+  zh-CN: 深渊之兽 萨隆魔龙
 text:
   en: |-
     You can target 1 LIGHT or DARK monster in either GY; banish it, and if you do, Special Summon this card from your hand. This is a Quick Effect if your opponent controls a monster. If this card is sent to the GY: You can send 1 "Bystial" monster or 1 "Branded" Spell/Trap from your Deck to the GY, except "Bystial Saronir". You can only use each effect of "Bystial Saronir" once per turn.
@@ -32,7 +32,9 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 또는 상대 묘지의, 빛 / 어둠 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외하고, 이 카드를 패에서 특수 소환한다. 상대 필드에 몬스터가 존재할 경우, 이 효과는 상대 턴에도 발동할 수 있다. ②: 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. "비스테드 살로니르" 이외의 "비스테드" 몬스터 1장 또는 "낙인" 마법 / 함정 카드 1장을 덱에서 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：可以以自己或者对手的墓地的1只光或暗属性怪兽为对象发动。将那只怪兽除外，将这张卡从手牌特殊召唤。对手场上有怪兽存在的场合，这个效果在对手的回合也能发动。②：这张卡被送入墓地的场合可以发动。从卡组将1只「深淵の獣サロニール／深渊之兽 萨隆恶龙」以外的「ビーステッド／深渊之兽」怪兽或者1张「烙印」魔法陷阱卡送入墓地。
+    这个卡名的①②的效果1回合各能使用1次。
+    ①：以自己或者对方的墓地1只光·暗属性怪兽为对象才能发动。那只怪兽除外，这张卡从手卡特殊召唤。对方场上有怪兽存在的场合，这个效果在对方回合也能发动。
+    ②：这张卡被送去墓地的场合才能发动。「深渊之兽 萨隆魔龙」以外的1只「深渊之兽」怪兽或者1张「烙印」魔法·陷阱卡从卡组送去墓地。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
