--- a/data/cards/72329844.yaml
+++ b/data/cards/72329844.yaml
@@ -12,7 +12,7 @@ name:
   ko: 스프라이트 스프린드
   ko_rr: Seupeuraiteu Seupeurindeu
   zh-TW:
-  zh-CN: 雷光妖灵 炮藏人
+  zh-CN: 卫星闪灵迅妖龙炮
 text:
   en: |-
     2 monsters, including a Level/Rank/Link 2 monster
@@ -40,8 +40,10 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. 이 카드는 링크 소환된 턴에는 링크 소재로 할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우에 발동할 수 있다. 덱에서 레벨 2 몬스터 1장을 묘지로 보낸다. ②: 이 카드가 필드에 존재하는 상태에서, 다른 몬스터가 특수 소환되었을 경우, 자신 필드의 엑시즈 소재를 1개 제거하고, 필드의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
-    包含等级2、阶级2或链接2的怪兽的怪兽2只
-    这个卡名的①②效果1回合只能有1次使用其中任意1个。这张卡在链接召唤的回合不能作为链接素材。①：这张卡链接召唤成功的场合可以发动。从卡组将1只等级2怪兽送入墓地。②：这张卡在场上存在的状态下，有其他的怪兽被特殊召唤的场合，可以将自己场上的1个多维素材取除，以场上的1只怪兽为对象发动。使那只怪兽返回持有者的手牌。
+    包含2星·2阶·连接2的怪兽在内的怪兽2只
+    这个卡名的①②的效果1回合只能有1次使用其中任意1个。这张卡在连接召唤的回合不能作为连接素材。
+    ①：这张卡连接召唤成功的场合才能发动。从卡组把1只2星怪兽送去墓地。
+    ②：这张卡在场上存在的状态，其他怪兽特殊召唤的场合，把自己场上1个超量素材取除，以场上1只怪兽为对象才能发动。那只怪兽回到持有者手卡。
 card_type: Monster
 monster_type_line: Thunder / Link / Effect
 attribute: FIRE
