--- a/data/cards/78077209.yaml
+++ b/data/cards/78077209.yaml
@@ -26,7 +26,9 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：这张卡在手牌或墓地存在，「魔竜将ディアボリカ／魔龙将 迪亚波利卡」以外的恶魔族怪兽被效果送入自己的墓地的场合可以发动。将这张卡特殊召唤。用这个效果特殊召唤的这张卡从场上离开的场合除外。②：这张卡被效果送入墓地的场合，可以以「魔竜将ディアボリカ／魔龙将 迪亚波利卡」以外的自己的墓地的1只恶魔族怪兽为对象发动。将那只怪兽加入手牌。
+    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
+    ①：这张卡在手卡·墓地存在，「魔龙将 迪亚波利卡」以外的恶魔族怪兽被效果送去自己墓地的场合才能发动。这张卡特殊召唤。这个效果特殊召唤的这张卡从场上离开的场合除外。
+    ②：这张卡被效果送去墓地的场合，以「魔龙将 迪亚波利卡」以外的自己墓地1只恶魔族怪兽为对象才能发动。那只怪兽加入手卡。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
