--- a/data/cards/66729231.yaml
+++ b/data/cards/66729231.yaml
@@ -12,7 +12,7 @@ name:
   ko: 이비리추어 지르기가스
   ko_rr:
   zh-TW:
-  zh-CN: 邪遗式魂魄巨灵
+  zh-CN: 禁咒仪・魂魄巨人
 text:
   en: |-
     You can Ritual Summon this card with any "Gishki" Ritual Spell Card. Once per turn: You can pay 1000 Life Points; draw 1 card, and if you do, reveal it, then, if it was a "Gishki" monster, shuffle 1 card from the field into the Deck.
@@ -32,7 +32,7 @@ text:
     "리추어" 라는 이름이 붙은 의식 마법 카드에 의해서 강림. 1턴에 1번, 1000 라이프 포인트를 지불하고 발동할 수 있다. 덱에서 카드를 1장 드로우하고 서로 확인한다. 확인한 카드가 "리추어" 라는 이름이 붙은 몬스터인 경우, 필드 위의 카드 1장을 주인의 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
-    名字带有「遗式」的仪式魔法卡降临。1回合1次，支付1000基本分才能发动。从卡组抽1张卡，给双方确认。确认的卡是名字带有「遗式」的怪兽的场合，选场上1张卡回到持有者卡组。
+    以"咒仪"仪式魔法卡降临。①：1回合1次，支付1000LP可以发动。自己从牌组抽1张，双方确认。确认的卡是"咒仪"怪兽的情况下，挑选1张场上的卡放回持有者的牌组。
 card_type: Monster
 monster_type_line: Aqua / Ritual / Effect
 attribute: WATER
@@ -83,6 +83,11 @@ sets:
   ko:
   - set_number: HA07-KR057
     set_name: 'Hidden Arsenal 7: Knight of Stars'
+    rarities:
+    - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC090
+    set_name: Classic Pack 02
     rarities:
     - Secret Rare
 limit_regulation:
