--- a/data/cards/90162951.yaml
+++ b/data/cards/90162951.yaml
@@ -12,7 +12,7 @@ name:
   ko: No.35 라베노스 타란툴라
   ko_rr:
   zh-TW:
-  zh-CN: No.35 极饿捕鸟蛛
+  zh-CN: 编号35 贪食捕鸟蛛
 text:
   en: |-
     2 Level 10 monsters
@@ -40,8 +40,8 @@ text:
     ①: 이 카드가 몬스터 존재하는 한, 자신 필드 몬스터의 공격력 / 수비력은, 자신과 상대 LP의 차의 수치만큼 올린다. ②: 엑시즈 소재를 가진 이 카드가 몬스터 존에 존재하는 한, 상대가 몬스터를 특수 소환할 때마다 상대에게 600 데미지를 준다. ③: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 카드의 공격력 이하의 공격력을 가지는 상대 필드의 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
-    10星怪兽×2
-    ①：只要这张卡在怪兽区域存在，自己场上的怪兽的攻击力·守备力上升自己和对方的基本分差的数值。②：只要持有XYZ素材的这张卡在怪兽区域存在，每次对方把怪兽特殊召唤给与对方600伤害。③：1回合1次，把这张卡1个XYZ素材取除才能发动。持有这张卡的攻击力以下的攻击力的对方场上的怪兽全部破坏。
+    等级10怪兽×2
+    ①：只要此卡存在于怪兽区域，自己场上怪兽的攻击力・守备力上升相当于自己和对手LP之差的数值。②：只要持有超量素材的此卡存在于怪兽区域，对手每次特殊召唤怪兽就给予对手600伤害。③：1回合1次，去除此卡的1个超量素材可以发动。将对手场上拥有此卡攻击力以下攻击力的怪兽全部破坏。
 card_type: Monster
 monster_type_line: Insect / Xyz / Effect
 attribute: DARK
@@ -94,6 +94,11 @@ sets:
     set_name: Premium Pack Vol.11
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC188
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
