--- a/data/cards/33904024.yaml
+++ b/data/cards/33904024.yaml
@@ -188,6 +188,10 @@ sets:
     set_name: 'Yu-Gi-Oh! Duel Links Legend Deck Guide: Yami Yugi VS Seto Kaiba promotional cards'
     rarities:
     - Common
+  - set_number: TBC1-JP014
+    set_name: Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: PHSW-KR057
     set_name: Photon Shockwave
