--- a/data/cards/35261759.yaml
+++ b/data/cards/35261759.yaml
@@ -192,6 +192,10 @@ sets:
     set_name: 'Structure Deck R: Lost Sanctuary'
     rarities:
     - Normal Parallel Rare
+  - set_number: TBC1-JP009
+    set_name: Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: TDIL-KR066
     set_name: The Dark Illusion
