--- a/data/cards/49238328.yaml
+++ b/data/cards/49238328.yaml
@@ -165,6 +165,10 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: TBC1-JP010
+    set_name: Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: SAST-KR067
     set_name: Savage Strike
