--- a/data/cards/51790181.yaml
+++ b/data/cards/51790181.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: Absolute Powerforce
     rarities:
     - Normal Rare
+  - set_number: TBC1-JP004
+    set_name: Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: ABPF-KR061
     set_name: Absolute Powerforce
