--- a/data/cards/67169062.yaml
+++ b/data/cards/67169062.yaml
@@ -314,6 +314,10 @@ sets:
     set_name: Duel Royale Deck Set EX Round 2
     rarities:
     - Common
+  - set_number: TBC1-JP003
+    set_name: Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: EEN-KR037
     set_name: Elemental Energy
