--- a/data/cards/84211599.yaml
+++ b/data/cards/84211599.yaml
@@ -100,6 +100,10 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: TBC1-JP011
+    set_name: Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: BLVO-KR065
     set_name: Blazing Vortex
