--- a/data/cards/62541668.yaml
+++ b/data/cards/62541668.yaml
@@ -12,7 +12,7 @@ name:
   ko: No.77 더 세븐 신즈
   ko_rr:
   zh-TW:
-  zh-CN: No.77 七罪蛛
+  zh-CN: 编号77 七宗罪
 text:
   en: |-
     2 Level 12 monsters
@@ -35,8 +35,8 @@ text:
     이 카드는 자신 필드의 랭크 10 / 11 의 어둠 속성 엑시즈 몬스터의 위에 겹쳐 엑시즈 소환할 수도 있다. 이 방법으로 특수 소환한 턴에, 이 카드의 ①의 효과는 발동할 수 없다. ①: 1턴에 1번, 이 카드의 엑시즈 소재를 2개 제거하고 발동할 수 있다. 상대 필드의 특수 소환된 몬스터를 전부 제외하고, 제외한 몬스터 중에서 1장을 골라 이 카드의 아래에 겹쳐 엑시즈 소재로 한다. ②: 필드의 이 카드가 전투 효과로 파괴될 경우, 대신에 이 카드의 엑시즈 소재를 1개 제거할 수 있다.
   zh-TW:
   zh-CN: |-
-    12星怪兽×2
-    这张卡也能在自己场上的10·11阶的暗属性XYZ怪兽上面重叠来XYZ召唤。这个方法特殊召唤的回合，这张卡的①的效果不能发动。①：1回合1次，把这张卡2个XYZ素材取除才能发动。对方场上的特殊召唤的怪兽全部除外，从除外的怪兽之中选1只在这张卡下面重叠作为XYZ素材。②：场上的这张卡被战斗·效果破坏的场合，可以作为代替把这张卡1个XYZ素材取除。
+    等级12怪兽×2
+    此卡也可重叠在自己场上阶级10・11的暗属性超量怪兽上面来超量召唤。以此方法特殊召唤的回合，此卡的①效果不可发动。①：1回合1次，去除此卡的2个超量素材可以发动。将对手场上被特殊召唤的怪兽全部除外，然后，从除外的怪兽中挑选1只，重叠在此卡下方作为超量素材。②：场上的此卡将被战斗・效果破坏的情况下，可去除此卡的1个超量素材作为代替。
 card_type: Monster
 monster_type_line: Fiend / Xyz / Effect
 attribute: DARK
@@ -89,6 +89,11 @@ sets:
     set_name: Premium Pack Vol.11
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: CL02-SC190
+    set_name: Classic Pack 02
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
