--- a/data/cards/yugipedia911742.yaml
+++ b/data/cards/yugipedia911742.yaml
@@ -40,6 +40,6 @@ sets:
     set_name: Cyberstorm Access
     rarities:
 limit_regulation:
-  tcg:
+  tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 911742
