--- a/data/cards/yugipedia911746.yaml
+++ b/data/cards/yugipedia911746.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Cyberse Ritual, Fusion, Synchro, Xyz, or Link Monster + 1 Cyberse monster
-    During your Main Phase: You can Special Summon 1 Cyberse monster from your hand, then this card's Level becomes that monster's. When your opponent activates a Spell/Trap Card or effect and you control a Link-4 or higher Cyberse monster (Quick Effect): You can banish this card from your field or GY; negate the activation. You can only use each effect of "Cyberse Disabwurm" once per turn.
+    During your Main Phase: You can Special Summon 1 Cyberse monster from your hand, then you can make this card's Level become that monster's. When your opponent activates a Spell/Trap Card or effect while you control a Link-4 or higher Cyberse monster (Quick Effect): You can banish this card from your field or GY; negate the activation. You can only use each effect of "Cyberse Disabwurm" once per turn.
   de:
   es:
   fr:
@@ -40,7 +40,8 @@ sets:
   - set_number: CYAC-JP034
     set_name: Cyberstorm Access
     rarities:
+    - Rare
 limit_regulation:
-  tcg:
+  tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 911746
