--- a/data/cards/yugipedia911744.yaml
+++ b/data/cards/yugipedia911744.yaml
@@ -31,6 +31,7 @@ attribute: DARK
 level: 1
 atk: 0
 def: 0
+ritual_spell: Cynet Ritual
 series:
 - Cyber
 sets:
@@ -38,8 +39,7 @@ sets:
   - set_number: CYAC-JP033
     set_name: Cyberstorm Access
     rarities:
-    - Rare
 limit_regulation:
-  tcg:
+  tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 911744
