--- a/data/cards/yugipedia911749.yaml
+++ b/data/cards/yugipedia911749.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3+ Effect Monsters
-    (Quick Effect): You can target cards your opponent controls and/or in their GY, up to the number of different types of monsters (Ritual/Fusion/Synchro/Xyz) you control and in your GY; return them to the hand, and if you do, this card gains 500 ATK for each card returned. If a monster(s) this card points to is destroyed by battle or sent to the GY: You can target 1 Cyberse monster in your GY; Special Summon it. You can only use each effect of "Firewall Dragon Singularity" once per turn.
+    (Quick Effect): You can target cards your opponent controls and/or in their GY, up to the number of different types of monsters (Ritual, Fusion, Synchro, Xyz) you control and in your GY; return them to the hand, and if you do, this card gains 500 ATK for each card returned. If a monster(s) this card points to is destroyed by battle or sent to the GY: You can target 1 Cyberse monster in your GY; Special Summon it. You can only use each effect of "Firewall Dragon Singularity" once per turn.
   de:
   es:
   fr:
@@ -31,11 +31,11 @@ monster_type_line: Cyberse / Link / Effect
 attribute: DARK
 link_arrows:
 - ↖
-- ⬆
-- ↗
 - ⬅
-- ➡
 - ⬇
+- ➡
+- ↗
+- ⬆
 atk: 3500
 materials: 3+ Effect Monsters
 series:
@@ -45,16 +45,16 @@ sets:
   - set_number: CYAC-JP047
     set_name: Cyberstorm Access
     rarities:
-    - UR
-    - UtR
-    - ScR
-    - PScR
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
   - set_number: CYAC-JP047
     set_name: Cyberstorm Access +1 Bonus Pack
     rarities:
-    - UR
-    - PScR
+    - Ultra Rare
+    - Prismatic Secret Rare
 limit_regulation:
-  tcg:
+  tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 911749
