--- a/data/cards/yugipedia911756.yaml
+++ b/data/cards/yugipedia911756.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 of your banished Cyberse monsters; Special Summon it. During your Main Phase, if you have 2000 LP or less; You can banish this card from your GY, then target 2 of your banished Cyberse monsters; add them to your hand. You can only use each effect of "Cynet Rollback" once per turn.
+    Target 1 of your banished Cyberse monsters; Special Summon it. During your Main Phase, if your LP are 2000 or less: You can banish this card from your GY, then target 2 of your banished Cyberse monsters; add them to your hand. You can only use each effect of "Cynet Rollback" once per turn.
   de:
   es:
   fr:
