--- a/data/cards/86331741.yaml
+++ b/data/cards/86331741.yaml
@@ -46,11 +46,8 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고, "가가가가 매지션" 이외의 자신 묘지의 엑시즈 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 효과를 무효로 하고 특수 소환한다. ②: 이 카드를 소재로서 가지고 있는 "미래황 호프" 엑시즈 몬스터는 이하의 효과를 얻는다. ●이 카드의 엑시즈 소재를 2개 제거하고, 자신 필드의 엑시즈 몬스터 1장을 대상으로 하여 발동할 수 있다. 턴 종료시까지, 그 몬스터의 공격력은 4000 이 되고, 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
-    4星怪兽×2
-    这个卡名的①的效果1回合只能使用1次。
-    ①：把这张卡1个超量素材取除，以「我我我我魔术师」以外的自己墓地1只超量怪兽为对象才能发动。那只怪兽效果无效特殊召唤。
-    ②：持有这张卡作为素材中的「未来皇 霍普」超量怪兽得到以下效果。
-    ●把这张卡2个超量素材取除，以自己场上1只超量怪兽为对象才能发动。直到回合结束时，那只怪兽的攻击力变成4000，效果无效化。
+    等级4怪兽×2
+    此卡名的①效果1回合仅可使用1次。①：去除此卡的1个超量素材，以自己墓地"我我我我魔术师"以外的1只超量怪兽为对象可以发动。将该怪兽的效果无效并特殊召唤。②：持有此卡作为素材的"未来皇霍普"超量怪兽获得以下效果。●去除此卡的2个超量素材，以自己场上的1只超量怪兽为对象可以发动。直至回合结束时为止，该怪兽的攻击力变为4000，效果无效化。
 card_type: Monster
 monster_type_line: Spellcaster / Xyz / Effect
 attribute: DARK
@@ -115,6 +112,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: CL02-SC183
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
