--- a/data/cards/yugipedia911746.yaml
+++ b/data/cards/yugipedia911746.yaml
@@ -32,7 +32,7 @@ attribute: DARK
 level: 6
 atk: 2300
 def: 1500
-materials: 1 Cyberse Ritual, Fusion, Synchro, Xyz, or Link Monster + 1 Cyberse monster
+materials: 1 Cyberse-Type Ritual, Fusion, Synchro, Xyz, or Link Monster + 1 Cyberse-Type monster
 series:
 - Cyber
 sets:
