--- a/data/cards/yugipedia911754.yaml
+++ b/data/cards/yugipedia911754.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Effect Monsters
-    Your opponent cannot target Link-4 or higher Link Monsters you control with card effects, also they cannot be destroyed by battle. If you control a "Firewall" Link Monster (Quick Effect): You can banish any number of Link Monsters from your GY whose total Link Ratings exactly equal 3; Special Summon this card from your GY, but banish it when it leaves the field. You can only use each effect of "Protectcode Talker" once per turn.
+    Your opponent cannot target Link-4 or higher Link Monsters you control with card effects, also they cannot be destroyed by battle. If you control a "Firewall" Link Monster (Quick Effect): You can banish any number of Link Monsters from your GY whose total Link Ratings exactly equal 3; Special Summon this card from your GY, but banish it when it leaves the field. You can only use this effect of "Protectcode Talker" once per turn.
   de:
   es:
   fr:
