--- a/data/cards/27548199.yaml
+++ b/data/cards/27548199.yaml
@@ -64,6 +64,7 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Secret Rare
+    - Starlight Rare
   de:
   - set_number: SAST-DE037
     set_name: Savage Strike
@@ -77,6 +78,7 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Secret Rare
+    - Starlight Rare
   fr:
   - set_number: SAST-FR037
     set_name: Savage Strike
@@ -90,6 +92,7 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Secret Rare
+    - Starlight Rare
   it:
   - set_number: SAST-IT037
     set_name: Savage Strike
@@ -103,6 +106,7 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Secret Rare
+    - Starlight Rare
   pt:
   - set_number: SAST-PT037
     set_name: Savage Strike
@@ -116,6 +120,7 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Secret Rare
+    - Starlight Rare
   ja:
   - set_number: SAST-JP037
     set_name: Savage Strike
