--- a/data/cards/85103922.yaml
+++ b/data/cards/85103922.yaml
@@ -116,6 +116,9 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Common
+  - set_number: SD45-JP019
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: PRIO-KR011
     set_name: Primal Origin
