--- a/data/cards/12444060.yaml
+++ b/data/cards/12444060.yaml
@@ -141,6 +141,9 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Common
+  - set_number: SD45-JP036
+    set_name: 'Structure Deck: Forest of the Traptrix'
+    rarities:
   ko:
   - set_number: PRIO-KR072
     set_name: Primal Origin
