--- a/rush.yaml
+++ b/rush.yaml
@@ -78413,3 +78413,495 @@ sets:
     rarities:
     - Over Rush Rare
 yugipedia_page_id: 911786
+---
+konami_id:
+name:
+  en: Executie Lilius
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・リリウス
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If you have a face-up Level 6 monster with 500 DEF on your field, you can Special Summon this card from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    Your Level 7 or higher monsters cannot attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 6
+atk: 2500
+def: 500
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP034
+    set_name: Over Rush Pack
+    rarities:
+    - Common
+yugipedia_page_id: 911894
+---
+konami_id:
+name:
+  en: Executie Lucy
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・ルーシー
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 1 Level 6 monster with 500 DEF from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 6
+atk: 1700
+def: 500
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP035
+    set_name: Over Rush Pack
+    rarities:
+    - Common
+yugipedia_page_id: 911895
+---
+konami_id:
+name:
+  en: Executie Ram
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・ラム
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 Level 6 monster with 500 DEF from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 Spell/Trap Card on your opponent's field. This turn, your Level 7 or higher monsters cannot attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 6
+atk: 1600
+def: 500
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP036
+    set_name: Over Rush Pack
+    rarities:
+    - Common
+yugipedia_page_id: 911896
+---
+konami_id:
+name:
+  en: Executie Prouty
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・プラウティ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Special Summon this card from your hand face-up to your field by revealing 1 other Level 6 monster with 500 DEF in your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Gain 500 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Plant / Effect
+attribute: EARTH
+level: 6
+atk: 1500
+def: 500
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP037
+    set_name: Over Rush Pack
+    rarities:
+    - Common
+yugipedia_page_id: 911897
+---
+konami_id:
+name:
+  en: Executie Scout!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・スカウト！
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 4 Level 6 monsters with 500 DEF and different names from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 2 cards. This turn, your Level 7 or higher monsters cannot attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP038
+    set_name: Over Rush Pack
+    rarities:
+    - Common
+yugipedia_page_id: 911898
+---
+konami_id:
+name:
+  en: Executie Scramble!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・スクランブル！
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 6 monster with 500 DEF from your hand or your Graveyard face-up to your field. This turn, your Level 7 or higher monsters cannot attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP039
+    set_name: Over Rush Pack
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 911899
+---
+konami_id:
+name:
+  en: Executie Emergency!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・エマージェンシー！
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a face-up Level 6 monster on your field is destroyed by an opponent's attack or their card effect while you have no other monsters on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 6 monster with 500 DEF from your Graveyard face-up to your field. Then, you can destroy 1 monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP040
+    set_name: Over Rush Pack
+    rarities:
+    - Common
+yugipedia_page_id: 911900
+---
+konami_id:
+name:
+  en: Executie Catch!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・キャッチ！
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster face-up while you have a face-up Level 6 monster with 500 DEF on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change 1 Level 8 or lower monster on your opponent's field to face-down Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP041
+    set_name: Over Rush Pack
+    rarities:
+    - Common
+yugipedia_page_id: 911901
+---
+konami_id:
+name:
+  en: Executie Break!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・ブレイク！
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack, place 1 face-up Level 6 monster with 500 DEF from your field on either the top or bottom of the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Negate the attack. Then, if you have a face-up Level 6 monster with 500 DEF on your field, you can destroy 1 Spell/Trap Card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Executie
+sets:
+  ja:
+  - set_number: RD/ORP1-JP042
+    set_name: Over Rush Pack
+    rarities:
+    - Common
+yugipedia_page_id: 911902
