--- a/data/cards/34707034.yaml
+++ b/data/cards/34707034.yaml
@@ -28,7 +28,7 @@ text:
   ja: |-
     自分の墓地の「水精鱗」と名のついたモンスター３体を選択して表側守備表示で特殊召喚する。この効果で特殊召喚したモンスターは効果が無効化され、攻撃宣言できず、エンドフェイズ時に破壊される。
   ko: |-
-    자신의 묘지에서 "머메일"이라는 이름이 붙은 몬스터 3장을 앞면 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화되어 공격 선언하지 못하고 엔드 페이즈에 파괴된다.
+    자신 묘지의 "머메일"이라는 이름이 붙은 몬스터 3장을 선택하고 앞면 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터는 효과가 무효화되어, 공격 선언을 할 수 없으며, 엔드 페이즈시에 파괴된다.
   zh-TW: |-
     选择我方墓地的3只冠有「水精鱗」之名的怪兽，并以表侧守备表示特殊召唤。以此效果特殊召唤的怪兽的效果被无效化，不可进行攻击宣言，于结束阶段时被破坏。
   zh-CN: |-
