--- a/data/cards/97697447.yaml
+++ b/data/cards/97697447.yaml
@@ -28,7 +28,7 @@ text:
   ja: |-
     自分フィールド上に表側表示で存在する「海」を墓地へ送って発動できる。フィールド上の魔法・罠カードを全て墓地へ送る。
   ko: |-
-    자신 필드 위에 앞면 표시로 존재하는 "바다"를 묘지로 보내고 발동한다. 필드 위의 마법 / 함정 카드를 전부 묘지로 보낸다.
+    자신 필드 위에 앞면 표시로 존재하는 "바다"를 묘지로 보내고 발동할 수 있다. 필드 위의 마법 / 함정 카드를 전부 묘지로 보낸다.
   zh-TW: |-
     可将我方场上以表侧表示存在的「海」送入墓地并发动。场上的魔法、陷阱卡全部送入墓地。
   zh-CN: |-
