--- a/data/cards/61314842.yaml
+++ b/data/cards/61314842.yaml
@@ -28,7 +28,7 @@ text:
   ja: |-
     自分の墓地の「紋章獣」と名のついたモンスター２体を選択して発動できる。選択したモンスター２体を特殊召喚し、その２体のみを素材としてエクシーズモンスター１体をエクシーズ召喚する。
   ko: |-
-    자신 묘지의 "문장수" 라는 이름이 붙은 몬스터 2장을 선택하고 발동할 수 있다. 선택한 몬스터 2장을 특수 소환하고, 그 2장만을 소재로서 엑시즈 몬스터 1장을 엑시즈 소환한다.
+    ①: 자신 묘지의 "문장수" 몬스터 2장을 대상으로 하고 발동할 수 있다. 그 몬스터 2장을 특수 소환하고, 그 몬스터 2장만을 소재로서 엑시즈 몬스터 1장을 엑시즈 소환한다.
   zh-TW: |-
     可选择我方墓地的2只冠有「紋章獸」之名的怪兽并发动。特殊召唤被选择的2只怪兽，并只以该2只怪兽为素材超量召唤1只超量怪兽。
   zh-CN: |-
