--- a/data/cards/61592395.yaml
+++ b/data/cards/61592395.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     「アルマの魔導書」以外のゲームから除外されている自分の「魔導書」と名のついた魔法カード１枚を選択して手札に加える。「アルマの魔導書」は１ターンに１枚しか発動できない。
   ko: |-
-    "알마의 마도서" 이외의 게임에서 제외되어 있는 자신의 "마도서"라는 이름이 붙은 마법 카드 1장을 선택하고 패에 넣는다. "알마의 마도서"는 1턴에 1장밖에 발동할 수 있다.
+    "아르마의 마도서" 이외의 게임에서 제외되어 있는 자신의 "마도서"라는 이름이 붙은 마법 카드 1장을 선택하고 패에 넣는다. "아르마의 마도서"는 1턴에 1장밖에 발동할 수 없다.
   zh-TW: |-
     选择我方除「永恆的魔導書」以外的1张从游戏中除外的冠有「魔導書」之名的魔法卡加入手牌。「永恆的魔導書」1回合只可发动1张。
   zh-CN: |-
