--- a/data/cards/26973555.yaml
+++ b/data/cards/26973555.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>FNo.<rt>퓨처 넘버즈</rt></ruby>0 미래용황 호프
   ko_rr: Pyucheo Neombeojeu Jero Miraeyonghwang Hopeu
   zh-TW:
-  zh-CN: 未来No.0 未来龙皇 霍普
+  zh-CN: 翼日编号0 未来龙皇霍普
 text:
   en: |-
     3 Xyz Monsters with the same Rank, except "Number" monsters
@@ -46,10 +46,8 @@ text:
     룰상, 이 카드의 랭크는 1 로 취급하고, 이 카드명은 "미래황 호프" 카드로도 취급한다. 이 카드는 자신 필드의 "FNo.(퓨처 넘버즈)0 미래황 호프" 위에 겹쳐 엑시즈 소환할 수도 있다. ①: 이 카드는 전투 / 효과로는 파괴되지 않는다. ②: 1턴에 1번, 상대가 몬스터의 효과를 발동했을 때, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 그 발동을 무효로 한다. 이 효과로 필드의 몬스터의 효과 발동을 무효로 했을 경우, 추가로 그 컨트롤을 얻는다.
   zh-TW:
   zh-CN: |-
-    「No.」怪兽以外的相同阶级的超量怪兽×3
-    规则上，这张卡的阶级当作1阶使用，这个卡名也当作「未来皇 霍普」卡使用。这张卡也能在自己场上的「未来No.0 未来皇 霍普」上面重叠来超量召唤。
-    ①：这张卡不会被战斗·效果破坏。
-    ②：1回合1次，对方把怪兽的效果发动时，把这张卡1个超量素材取除才能发动。那个发动无效。这个效果把场上的怪兽的效果的发动无效的场合，再得到那个控制权。
+    "编号"怪兽以外的相同阶级超量怪兽×3
+    规则上，此卡的阶级视为1，此卡名也视为"未来皇霍普"卡。此卡也可重叠在自己场上的"翼日编号0 未来皇霍普"上面来超量召唤。①：此卡不会因战斗・效果被破坏。②：1回合1次，对手发动怪兽的效果时，去除此卡的1个超量素材可以发动。将该发动无效。以此效果将场上怪兽效果的发动无效了的情况下，进而获得其控制权。
 card_type: Monster
 monster_type_line: Warrior / Xyz / Effect
 attribute: LIGHT
@@ -144,6 +142,11 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL02-SC186
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
