--- a/data/cards/84813516.yaml
+++ b/data/cards/84813516.yaml
@@ -81,6 +81,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 884285
