--- a/data/cards/kdb18447.yaml
+++ b/data/cards/kdb18447.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18447
 password:
 name:
   en: Sacred Sheep Tree, Baromet
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    レベル４モンスター×２体以上
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除き、自分の墓地の通常罠カード１枚を対象として発動できる。そのカードをデッキの一番下に戻す。その後、自分はデッキから１枚ドローする。②：通常罠カードが発動した場合に発動できる。自分フィールドのＸ素材を１つ取り除き、手札からレベル４モンスター１体を特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -44,5 +46,5 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg:
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 906228
