--- a/data/cards/yugipedia912894.yaml
+++ b/data/cards/yugipedia912894.yaml
@@ -17,7 +17,8 @@ text:
   en: |-
     Activate 1 of these effects.
     ● Target 1 face-up monster you control; it gains 800 ATK until the end of this turn.
-    ● Target 1 Equip Spell in either GY; either Set it to your field or equip it to an appropriate monster you control.</br> You can only activate 1 "Arms Regeneration" per turn.
+    ● Target 1 Equip Spell in either GY; either Set it to your field or equip it to 1 appropriate monster you control.
+    You can only activate 1 "Arms Regeneration" per turn.
   de:
   es:
   fr:
@@ -37,6 +38,10 @@ sets:
   - set_number: 23PP-JP001
     set_name: Premium Pack 2023
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
