--- a/data/cards/43490025.yaml
+++ b/data/cards/43490025.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>FNo.<rt>퓨처 넘버즈</rt></ruby>0 미래황 호프－퓨처 슬래시
   ko_rr: Pyucheo Neombeojeu Jero Miraehwang Hopeu - Pyucheo Seullaesi
   zh-TW:
-  zh-CN: 未来No.0 未来皇 霍普-未来斩
+  zh-CN: 翼日编号0 未来皇霍普－翼日斩
 text:
   en: |-
     2 Xyz Monsters with the same Rank, except "Number" monsters
@@ -46,8 +46,8 @@ text:
     룰상, 이 카드의 랭크는 1 로 취급한다. 이 카드는 자신 필드의, "유토피아" 몬스터 또는 "FNo.(퓨처 넘버즈)0 미래황 호프"의 위에 겹쳐 엑시즈 소환할 수도 있다. ①: 이 카드의 공격력은 서로 묘지의 "No." 엑시즈 몬스터의 수 × 500 올린다. ②: 이 카드는 전투로는 파괴되지 않는다. ③: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 턴에, 이 카드는 1번의 배틀 페이즈 중에 2회 공격할 수 있다.
   zh-TW:
   zh-CN: |-
-    「No.」怪兽以外的相同阶级的XYZ怪兽×2
-    规则上，这张卡的阶级当作1阶使用。这张卡也能在自己场上的「希望皇霍普」怪兽或者「FNo.0 未来皇霍普」上面重叠来XYZ召唤。①：这张卡的攻击力上升双方墓地的「No.」XYZ怪兽数量×500。②：这张卡不会被战斗破坏。③：1回合1次，把这张卡1个XYZ素材取除才能发动。这个回合，这张卡在同1次的战斗阶段中可以作2次攻击。
+    "编号"怪兽以外的相同阶级超量怪兽×2
+    规则上，此卡的阶级视为1。此卡也可重叠在自己场上的"希望皇霍普"怪兽或"翼日编号0 未来皇霍普"上面来超量召唤。①：此卡的攻击力上升相当于双方墓地的"编号"超量怪兽数量×500的数值。②：此卡不会因战斗被破坏。③：1回合1次，去除此卡的1个超量素材可以发动。此回合，此卡在1次战斗阶段中可攻击2次。
 card_type: Monster
 monster_type_line: Warrior / Xyz / Effect
 attribute: LIGHT
@@ -110,6 +110,11 @@ sets:
     set_name: Premium Pack Vol.13
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC185
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
