--- a/data/cards/yugipedia911962.yaml
+++ b/data/cards/yugipedia911962.yaml
@@ -42,6 +42,10 @@ sets:
   - set_number: 23PP-JP019
     set_name: Premium Pack 2023
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
