--- a/data/cards/yugipedia912892.yaml
+++ b/data/cards/yugipedia912892.yaml
@@ -35,6 +35,10 @@ sets:
   - set_number: 23PP-JP005
     set_name: Premium Pack 2023
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
