--- a/data/cards/yugipedia912896.yaml
+++ b/data/cards/yugipedia912896.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Tribute this card; draw 1 card. You can banish this card from your GY, then target 1 Plant monster in your GY; add it to your hand, then, if its original Level is 7 or higher, you can send 1 Plant monster from your Deck to the GY. You can only use 1 "Rose Shaman" effect per turn, and only once that turn..
+    You can Tribute this card; draw 1 card. You can banish this card from your GY, then target 1 Plant monster in your GY; add it to your hand, then, if you added a Plant monster whose original Level is 7 or higher to your hand, you can send 1 Plant monster from your Deck to the GY. You can only use 1 "Rose Shaman" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -41,6 +41,10 @@ sets:
   - set_number: 23PP-JP009
     set_name: Premium Pack 2023
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
