--- a/data/cards/yugipedia912898.yaml
+++ b/data/cards/yugipedia912898.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Special Summoned and you do not control a card in the Field Zone: You can add 1 Field Spell from your Deck to your hand. If this card is destroyed by battle or card effect and sent to the GY: You can target 1 Field Spell in your GY; add 1 card with the same name from your Deck to your hand. You can only use each effect of "Cattycorn" once per turn.
+    If this card is Special Summoned and you control no card in your Field Zone: You can add 1 Field Spell from your Deck to your hand. If this card is destroyed by battle or card effect and sent to the GY: You can target 1 Field Spell in your GY; add 1 card with the same name from your Deck to your hand. You can only use each effect of "Cattycorn" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,10 @@ sets:
   - set_number: 23PP-JP011
     set_name: Premium Pack 2023
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
