--- a/data/rush/17519.yaml
+++ b/data/rush/17519.yaml
@@ -1,6 +1,6 @@
 konami_id: 17519
 name:
-  en: Executie Fermi
+  en: Excutie Fermi
   de:
   es:
   fr:
@@ -47,10 +47,10 @@ level: 6
 atk: 1800
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieFermi-RDSD01-JP-C.png
+  image: ExcutieFermi-RDSD01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP033
