--- a/data/rush/yugipedia910197.yaml
+++ b/data/rush/yugipedia910197.yaml
@@ -50,5 +50,6 @@ sets:
   - set_number: RD/ORP1-JP049
     set_name: Over Rush Pack
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 yugipedia_page_id: 910197
