--- a/data/rush/yugipedia911896.yaml
+++ b/data/rush/yugipedia911896.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Executie Ram
+  en: Excutie Ram
   de:
   es:
   fr:
@@ -43,10 +43,10 @@ level: 6
 atk: 1600
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieRam-RDORP1-JP-OP.png
+  image: ExcutieRam-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP036
