--- a/data/rush/yugipedia912856.yaml
+++ b/data/rush/yugipedia912856.yaml
@@ -52,5 +52,6 @@ sets:
   - set_number: RD/ORP1-JP046
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 912856
