--- a/data/cards/62967433.yaml
+++ b/data/cards/62967433.yaml
@@ -1,5 +1,5 @@
 konami_id: 18447
-password:
+password: 62967433
 name:
   en: Sacred Sheep Tree, Baromet
   de:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Level 4 monsters
-    You can detach 1 material from this card, then target 1 Normal Trap in your GY; place it on the bottom of the Deck, then draw 1 card. If a Normal Trap Card is activated: You can detach 1 material from a monster you control, and if you do, Special Summon 1 Level 4 monster from your hand. You can only use each effect of "Sacred Sheep Tree, Baromet" once per turn.
+    You can detach 1 material from this card, then target 1 Normal Trap in your GY; place it on the bottom of the Deck, then draw 1 card. If a Normal Trap Card is activated (except during the Damage Step): You can detach 1 material from a monster you control, and if you do, Special Summon 1 Level 4 monster from your hand. You can only use each effect of "Sacred Sheep Tree, Baromet" once per turn.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ def: 2000
 materials: 2 or more Level 4 monsters
 images:
 - index: 1
-  image: SacredSheepTreeBaromet-VJMP-JP-OP.png
+  image: SacredSheepTreeBaromet-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP227
