--- a/data/rush/17538.yaml
+++ b/data/rush/17538.yaml
@@ -1,6 +1,6 @@
 konami_id: 17538
 name:
-  en: Executie Up!
+  en: Excutie Up!
   de:
   es:
   fr:
@@ -43,10 +43,10 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieUp-RDKP09-JP-SR.png
+  image: ExcutieUp-RDKP09-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP09-JP052
