--- a/data/rush/yugipedia904504.yaml
+++ b/data/rush/yugipedia904504.yaml
@@ -46,5 +46,6 @@ sets:
   - set_number: RD/ORP1-JP064
     set_name: Over Rush Pack
     rarities:
+    - Ultra Rare
     - Secret Rare
 yugipedia_page_id: 904504
