--- a/data/rush/yugipedia905621.yaml
+++ b/data/rush/yugipedia905621.yaml
@@ -67,5 +67,6 @@ sets:
   - set_number: RD/ORP1-JP020
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 905621
