--- a/data/rush/yugipedia905622.yaml
+++ b/data/rush/yugipedia905622.yaml
@@ -65,5 +65,6 @@ sets:
   - set_number: RD/ORP1-JP021
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 905622
