--- a/data/rush/yugipedia909130.yaml
+++ b/data/rush/yugipedia909130.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Executie Floor
+  en: Excutie Floa
   de:
   es:
   fr:
@@ -43,14 +43,15 @@ level: 6
 atk: 1700
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieFloor-RDORP1-JP-OP.png
+  image: ExcutieFloa-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP033
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 909130
