--- a/data/rush/yugipedia910038.yaml
+++ b/data/rush/yugipedia910038.yaml
@@ -50,5 +50,6 @@ sets:
   - set_number: RD/ORP1-JP051
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 910038
