--- a/data/rush/yugipedia911894.yaml
+++ b/data/rush/yugipedia911894.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Executie Lilius
+  en: Excutie Lilius
   de:
   es:
   fr:
@@ -57,10 +57,10 @@ level: 6
 atk: 2500
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieLilius-RDORP1-JP-OP.png
+  image: ExcutieLilius-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP034
