--- a/data/rush/yugipedia911895.yaml
+++ b/data/rush/yugipedia911895.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Executie Lucy
+  en: Excutie Lucy
   de:
   es:
   fr:
@@ -43,10 +43,10 @@ level: 6
 atk: 1700
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieLucy-RDORP1-JP-OP.png
+  image: ExcutieLucy-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP035
