--- a/data/rush/yugipedia911897.yaml
+++ b/data/rush/yugipedia911897.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Executie Prouty
+  en: Excutie Prouty
   de:
   es:
   fr:
@@ -55,10 +55,10 @@ level: 6
 atk: 1500
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieProuty-RDORP1-JP-OP.png
+  image: ExcutieProuty-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP037
