--- a/data/rush/yugipedia911899.yaml
+++ b/data/rush/yugipedia911899.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Executie Scramble!
+  en: Excutie Scramble!
   de:
   es:
   fr:
@@ -39,10 +39,10 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieScramble-RDORP1-JP-OP.png
+  image: ExcutieScramble-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP039
