--- a/data/rush/yugipedia911901.yaml
+++ b/data/rush/yugipedia911901.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Executie Catch!
+  en: Excutie Catch!
   de:
   es:
   fr:
@@ -39,10 +39,10 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieCatch-RDORP1-JP-OP.png
+  image: ExcutieCatch-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP041
