--- a/data/rush/yugipedia911902.yaml
+++ b/data/rush/yugipedia911902.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Executie Break!
+  en: Excutie Break!
   de:
   es:
   fr:
@@ -39,10 +39,10 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieBreak-RDORP1-JP-OP.png
+  image: ExcutieBreak-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP042
