--- a/data/rush/yugipedia912349.yaml
+++ b/data/rush/yugipedia912349.yaml
@@ -64,5 +64,6 @@ sets:
   - set_number: RD/ORP1-JP047
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 912349
