--- a/rush.yaml
+++ b/rush.yaml
@@ -112,6 +112,10 @@ sets:
     rarities:
     - Rare
     - Secret Rare
+  - set_number: RD/ORP1-JP003
+    set_name: Over Rush Pack
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/ST01-KR001
     set_name: Starter Deck Yuga - Cut Through! Sevens Road!!
@@ -130,10 +134,6 @@ sets:
     rarities:
     - Rare
     - Secret Rare
-  - set_number: RD/ORP1-JP003
-    set_name: Over Rush Pack
-    rarities:
-    - Over Rush Rare
 yugipedia_page_id: 720202
 ---
 konami_id: 15151
@@ -53523,7 +53523,7 @@ yugipedia_page_id: 846843
 ---
 konami_id: 17289
 name:
-  en: Executie Feena
+  en: Excutie Feena
   de:
   es:
   fr:
@@ -53570,10 +53570,10 @@ level: 6
 atk: 1700
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieFeena-RDKP08-JP-C.png
+  image: ExcutieFeena-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP013
@@ -59532,7 +59532,7 @@ yugipedia_page_id: 862472
 ---
 konami_id: 17519
 name:
-  en: Executie Fermi
+  en: Excutie Fermi
   de:
   es:
   fr:
@@ -59579,10 +59579,10 @@ level: 6
 atk: 1800
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieFermi-RDSD01-JP-C.png
+  image: ExcutieFermi-RDSD01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP033
@@ -60821,7 +60821,7 @@ yugipedia_page_id: 863732
 ---
 konami_id: 17538
 name:
-  en: Executie Up!
+  en: Excutie Up!
   de:
   es:
   fr:
@@ -60864,10 +60864,10 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieUp-RDKP09-JP-SR.png
+  image: ExcutieUp-RDKP09-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP09-JP052
@@ -80077,6 +80077,7 @@ sets:
   - set_number: RD/ORP1-JP064
     set_name: Over Rush Pack
     rarities:
+    - Ultra Rare
     - Secret Rare
 yugipedia_page_id: 904504
 ---
@@ -80132,6 +80133,7 @@ sets:
   - set_number: RD/ORP1-JP057
     set_name: Over Rush Pack
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 yugipedia_page_id: 904669
 ---
@@ -80464,6 +80466,7 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Super Rare
+    - Secret Rare
 yugipedia_page_id: 905613
 ---
 konami_id:
@@ -80667,6 +80670,7 @@ sets:
   - set_number: RD/ORP1-JP019
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 905619
 ---
@@ -80739,6 +80743,7 @@ sets:
   - set_number: RD/ORP1-JP020
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 905621
 ---
@@ -80809,6 +80814,7 @@ sets:
   - set_number: RD/ORP1-JP021
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 905622
 ---
@@ -82049,7 +82055,7 @@ yugipedia_page_id: 909123
 ---
 konami_id:
 name:
-  en: Executie Lumiere
+  en: Excutie Lumiere
   de:
   es:
   fr:
@@ -82104,10 +82110,10 @@ level: 6
 atk: 1800
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieLumiere-RDORP1-JP-OP.png
+  image: ExcutieLumiere-RDORP1-JP-OP.png
 - index: 2
   image: ExcutieLumiere-RDJF23-JP-OP.png
 sets:
@@ -82115,6 +82121,7 @@ sets:
   - set_number: RD/ORP1-JP031
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
   - set_number: RD/JF23-JPD01
     set_name: Excutie Duel Set
@@ -82124,7 +82131,7 @@ yugipedia_page_id: 909127
 ---
 konami_id:
 name:
-  en: Executie Floor
+  en: Excutie Floa
   de:
   es:
   fr:
@@ -82167,21 +82174,22 @@ level: 6
 atk: 1700
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieFloor-RDORP1-JP-OP.png
+  image: ExcutieFloa-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP033
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 909130
 ---
 konami_id:
 name:
-  en: Executie Leir
+  en: Excutie Leir
   de:
   es:
   fr:
@@ -82238,15 +82246,16 @@ level: 6
 atk: 1800
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieLeir-RDORP1-JP-OP.png
+  image: ExcutieLeir-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP032
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 909132
 ---
@@ -82359,6 +82368,7 @@ sets:
   - set_number: RD/ORP1-JP051
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 910038
 ---
@@ -82414,6 +82424,7 @@ sets:
   - set_number: RD/ORP1-JP049
     set_name: Over Rush Pack
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 yugipedia_page_id: 910197
 ---
@@ -82473,6 +82484,7 @@ sets:
   - set_number: RD/ORP1-JP052
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 910869
 ---
@@ -82840,12 +82852,13 @@ sets:
   - set_number: RD/ORP1-JP059
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 911786
 ---
 konami_id:
 name:
-  en: Executie Lilius
+  en: Excutie Lilius
   de:
   es:
   fr:
@@ -82902,10 +82915,10 @@ level: 6
 atk: 2500
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieLilius-RDORP1-JP-OP.png
+  image: ExcutieLilius-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP034
@@ -82916,7 +82929,7 @@ yugipedia_page_id: 911894
 ---
 konami_id:
 name:
-  en: Executie Lucy
+  en: Excutie Lucy
   de:
   es:
   fr:
@@ -82959,10 +82972,10 @@ level: 6
 atk: 1700
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieLucy-RDORP1-JP-OP.png
+  image: ExcutieLucy-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP035
@@ -82973,7 +82986,7 @@ yugipedia_page_id: 911895
 ---
 konami_id:
 name:
-  en: Executie Ram
+  en: Excutie Ram
   de:
   es:
   fr:
@@ -83016,10 +83029,10 @@ level: 6
 atk: 1600
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieRam-RDORP1-JP-OP.png
+  image: ExcutieRam-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP036
@@ -83030,7 +83043,7 @@ yugipedia_page_id: 911896
 ---
 konami_id:
 name:
-  en: Executie Prouty
+  en: Excutie Prouty
   de:
   es:
   fr:
@@ -83085,10 +83098,10 @@ level: 6
 atk: 1500
 def: 500
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieProuty-RDORP1-JP-OP.png
+  image: ExcutieProuty-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP037
@@ -83099,7 +83112,7 @@ yugipedia_page_id: 911897
 ---
 konami_id:
 name:
-  en: Executie Scout!
+  en: Excutie Scout!
   de:
   es:
   fr:
@@ -83138,10 +83151,10 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieScout-RDORP1-JP-OP.png
+  image: ExcutieScout-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP038
@@ -83152,7 +83165,7 @@ yugipedia_page_id: 911898
 ---
 konami_id:
 name:
-  en: Executie Scramble!
+  en: Excutie Scramble!
   de:
   es:
   fr:
@@ -83191,10 +83204,10 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieScramble-RDORP1-JP-OP.png
+  image: ExcutieScramble-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP039
@@ -83205,7 +83218,7 @@ yugipedia_page_id: 911899
 ---
 konami_id:
 name:
-  en: Executie Emergency!
+  en: Excutie Emergency!
   de:
   es:
   fr:
@@ -83244,10 +83257,10 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieEmergency-RDORP1-JP-OP.png
+  image: ExcutieEmergency-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP040
@@ -83258,7 +83271,7 @@ yugipedia_page_id: 911900
 ---
 konami_id:
 name:
-  en: Executie Catch!
+  en: Excutie Catch!
   de:
   es:
   fr:
@@ -83297,10 +83310,10 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieCatch-RDORP1-JP-OP.png
+  image: ExcutieCatch-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP041
@@ -83311,7 +83324,7 @@ yugipedia_page_id: 911901
 ---
 konami_id:
 name:
-  en: Executie Break!
+  en: Excutie Break!
   de:
   es:
   fr:
@@ -83350,10 +83363,10 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Executie
+- Excutie
 images:
 - index: 1
-  image: ExecutieBreak-RDORP1-JP-OP.png
+  image: ExcutieBreak-RDORP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/ORP1-JP042
@@ -83412,6 +83425,7 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Super Rare
+    - Secret Rare
 yugipedia_page_id: 912347
 ---
 konami_id:
@@ -83480,6 +83494,7 @@ sets:
   - set_number: RD/ORP1-JP047
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 912349
 ---
@@ -83592,5 +83607,6 @@ sets:
   - set_number: RD/ORP1-JP046
     set_name: Over Rush Pack
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 912856
