--- a/data/cards/49036338.yaml
+++ b/data/cards/49036338.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>PSY<rt>싸이</rt></ruby>프레임 드라이버
   ko_rr: Ssai-Peureim Deuraibeo
   zh-TW:
-  zh-CN: PSY骨架驱动者
+  zh-CN: 精神骨架 驱动者
 text:
   en: |-
     A Psychic soldier that rides into battle against the Security Forces on currents of lightning, using an autonomic amplifier called "PSY-Frame".
@@ -32,7 +32,7 @@ text:
     전격을 조종하는 사이킥 전사. 자율형 증폭기 "PSY(싸이)프레임"을 구사하여, 시큐리티 포스에 습격을 강행한다. 그 모습은, 정말로 전광석화와 같다.
   zh-TW:
   zh-CN: |-
-    操纵电击的念动力战士。驱使自律型增幅器「PSY骨架」，对治安部队(セキュリティ・フォース)发动强袭。那个姿态，确实就如电光石火一般。
+    操纵电击的念动力战士。驱使自律型增幅器"精神骨架"，对超元特防队施以强袭。其姿态正如电光火石一般。
 card_type: Monster
 monster_type_line: Psychic / Normal
 attribute: LIGHT
@@ -150,6 +150,11 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC118
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
