--- a/data/cards/58628539.yaml
+++ b/data/cards/58628539.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     自分がエクシーズ召喚に成功した時、フィールド上のカード１枚を選択して発動できる。選択したカードを破壊する。
   ko: |-
-    자신이 엑시즈 소환에 성공했을 때, 필드 위에 존재하는 카드 1장을 선택하고 발동할 수 있다. 선택한 카드를 파괴한다.
+    자신이 엑시즈 소환에 성공했을 때, 필드 위의 카드 1장을 선택하고 발동할 수 있다. 선택한 카드를 파괴한다.
   zh-TW: |-
     我方超量召唤成功时，可选择场上的1张卡片发动。被选择的卡片进行破坏。
   zh-CN: |-
