--- a/data/cards/85839825.yaml
+++ b/data/cards/85839825.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Separe 1 Matéria Xyz que controla para selecionar 1 monstro face para cima de seu oponente; destrua esse monstro.
   ja: |-
-    自分フィールド上に存在するエクシーズ素材を１つ取り除いて発動する。相手フィールド上に表側表示で存在するモンスター１体を選択して破壊する。
+    自分フィールド上のエクシーズ素材を１つ取り除いて発動できる。相手フィールド上に表側表示で存在するモンスター１体を選択して破壊する。
   ko: |-
-    자신 필드 위에 존재하는 엑시즈 소재를 1개 제외하고 발동한다. 상대 필드 위에 앞면 표시로 존재하는 몬스터 1장을 선택하고 파괴한다.
+    자신 필드 위의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 상대 필드 위에 앞면 표시로 존재하는 몬스터 1장을 선택하고 파괴한다.
   zh-TW: |-
     可移除我方场上的1个超量素材发动。选择对手以表侧表示存在场上的1只怪兽加以破坏。
   zh-CN: |-
