--- a/data/cards/03289027.yaml
+++ b/data/cards/03289027.yaml
@@ -45,22 +45,27 @@ sets:
   - set_number: SR13-EN003
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   de:
   - set_number: SR13-DE003
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   fr:
   - set_number: SR13-FR003
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   it:
   - set_number: SR13-IT003
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   pt:
   - set_number: SR13-PT003
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   ja:
   - set_number: SR13-JP003
     set_name: "Structure Deck R: Devil's Gate"
