--- a/data/cards/03167439.yaml
+++ b/data/cards/03167439.yaml
@@ -42,22 +42,27 @@ sets:
   - set_number: SR13-EN033
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   de:
   - set_number: SR13-DE033
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   fr:
   - set_number: SR13-FR033
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   it:
   - set_number: SR13-IT033
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   pt:
   - set_number: SR13-PT033
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   ja:
   - set_number: SR13-JP034
     set_name: "Structure Deck R: Devil's Gate"
