--- a/data/cards/30284022.yaml
+++ b/data/cards/30284022.yaml
@@ -42,22 +42,27 @@ sets:
   - set_number: SR13-EN025
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   de:
   - set_number: SR13-DE025
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   fr:
   - set_number: SR13-FR025
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   it:
   - set_number: SR13-IT025
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   pt:
   - set_number: SR13-PT025
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   ja:
   - set_number: SR13-JP025
     set_name: "Structure Deck R: Devil's Gate"
