--- a/data/cards/41406613.yaml
+++ b/data/cards/41406613.yaml
@@ -45,22 +45,27 @@ sets:
   - set_number: SR13-EN001
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   de:
   - set_number: SR13-DE001
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   fr:
   - set_number: SR13-FR001
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   it:
   - set_number: SR13-IT001
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   pt:
   - set_number: SR13-PT001
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   ja:
   - set_number: SR13-JP001
     set_name: "Structure Deck R: Devil's Gate"
