--- a/data/cards/65956182.yaml
+++ b/data/cards/65956182.yaml
@@ -42,22 +42,27 @@ sets:
   - set_number: SR13-EN042
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   de:
   - set_number: SR13-DE042
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   fr:
   - set_number: SR13-FR042
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   it:
   - set_number: SR13-IT042
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   pt:
   - set_number: SR13-PT042
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   ja:
   - set_number: SR13-JPP02
     set_name: "Structure Deck R: Devil's Gate The Doors of the Abyss Opened Pack"
