--- a/data/cards/76672730.yaml
+++ b/data/cards/76672730.yaml
@@ -42,22 +42,27 @@ sets:
   - set_number: SR13-EN026
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   de:
   - set_number: SR13-DE026
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   fr:
   - set_number: SR13-FR026
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   it:
   - set_number: SR13-IT026
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   pt:
   - set_number: SR13-PT026
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Ultra Rare
   ja:
   - set_number: SR13-JP026
     set_name: "Structure Deck R: Devil's Gate"
