--- a/data/cards/77895328.yaml
+++ b/data/cards/77895328.yaml
@@ -47,22 +47,27 @@ sets:
   - set_number: SR13-EN002
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   de:
   - set_number: SR13-DE002
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   fr:
   - set_number: SR13-FR002
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   it:
   - set_number: SR13-IT002
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   pt:
   - set_number: SR13-PT002
     set_name: 'Structure Deck: Dark World'
     rarities:
+    - Super Rare
   ja:
   - set_number: SR13-JP002
     set_name: "Structure Deck R: Devil's Gate"
